--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -5,14 +5,26 @@ agent:
     type: e1-standard-2
     os_image: ubuntu1804
 blocks:
-  - name: 'Block #1'
+  - name: Test
     task:
       jobs:
-        - name: 'Job #1'
+        - name: Unit Tests
           commands:
-            - sem-version python 3.7
-            - checkout
-            - mkdir .pip_cache
-            - cache restore
-            - pip install --cache-dir .pip_cache -r requirements.txt
-            - cache store
+            - cd martor_demo
+            - python manage.py makemigrations
+            - python manage.py migrate
+            - python manage.py test
+        - name: Checklist
+          commands:
+            - cd martor_demo
+            - python manage.py check --deploy
+        - name: Style Check
+          commands:
+            - pip install flake8
+            - flake8 martor_demo/ --max-line-length=127
+      prologue:
+        commands:
+          - sem-version python 3.7
+          - checkout
+          - cache restore
+          - pip install --cache-dir .pip_cache -r requirements.txt
