--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -5,8 +5,25 @@ agent:
     type: e1-standard-2
     os_image: ubuntu1804
 blocks:
-  - name: Test
+  - name: 'Block #1'
     task:
+      jobs:
+        - name: 'Job #1'
+          commands:
+            - sem-version python 3.7
+            - checkout
+            - mkdir .pip_cache
+            - cache restore
+            - pip install --cache-dir .pip_cache -r requirements.txt
+            - cache store
+  - name: 'Block #2'
+    task:
+      prologue:
+        commands:
+          - sem-version python 3.7
+          - checkout
+          - cache restore
+          - pip install --cache-dir .pip_cache -r requirements.txt
       jobs:
         - name: Unit Tests
           commands:
@@ -22,9 +39,3 @@ blocks:
           commands:
             - pip install flake8
             - flake8 martor_demo/ --max-line-length=127
-      prologue:
-        commands:
-          - sem-version python 3.7
-          - checkout
-          - cache restore
-          - pip install --cache-dir .pip_cache -r requirements.txt
